--- a/requirements.txt
+++ b/requirements.txt
@@ -26,5 +26,5 @@ prometheus-client==0.12.0
 pillow==8.4.0 ; python_version == "3.6"
 pillow==9.0.0 ; python_version > "3.6"
 av==8.0.3; platform_machine !=  "aarch64"
-decord platform_machine !=  "aarch64"
+decord; platform_machine !=  "aarch64"
 SimpleITK; platform_machine !=  "aarch64"
