--- a/Dockerfile-gpu
+++ b/Dockerfile-gpu
@@ -1,14 +1,29 @@
-FROM paddlepaddle/paddle:2.3.1-gpu-cuda11.2-cudnn8
+FROM paddlepaddle/paddle:2.3.2-gpu-cuda11.2-cudnn8 as builder
 MAINTAINER lianshufeng <251708339@qq.com>
 
-# 添加 依赖
+#下载二进制文件
+RUN wget https://paddle-serving.bj.bcebos.com/test-dev/bin/serving-gpu-112-0.7.0.tar.gz -O /tmp/servin.tar.gz
+RUN cd /tmp/ ; tar -xvzf /tmp/servin.tar.gz
+
+
+FROM paddlepaddle/paddle:2.3.2-gpu-cuda11.2-cudnn8 as runtime
+
+#编译中拷贝文件
+COPY --from=builder /tmp/serving-gpu-112-0.7.0 /opt/serving
+
+#声明
+ENV SERVING_BIN=/opt/serving/serving
+
+# 添加依赖
 Add ./ /infer
 
 # 安装依赖 (cpu)
 RUN pip install -r /infer/requirements-gpu.txt
 
+
 # 工作目录
-WORKDIR /infer
+WORKDIR /Serving 
+
 
 # 运行服务
-CMD ["python","src/ApplicationMain.py"]
+CMD ["python","-m","paddle_serving_server.serve","--model","serving_server","--port","9393"]
