--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -1,8 +1,2 @@
-paddlepaddle-gpu  >= 2.3.1
-paddlex
-cython
-paddlelite
-x2paddle
-flask
-ffmpeg-python
-opencv-python
+paddle-serving-client
+paddle-serving-server-gpu==0.7.0.post112
