--- a/docker-compose-gpu.yml
+++ b/docker-compose-gpu.yml
@@ -1,13 +1,13 @@
 version: "3"
 
 services:
-  infer:
+  paddle_serving:
     image: lianshufeng/paddle_serving:gpu
     volumes:
       - "./inference_model:/Serving"
     ports:
       - "9999:8888"
-    container_name: infer
+    container_name: paddle_serving
     restart: always
     command: python -m paddle_serving_server.serve --model serving_server
     deploy:
