--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,7 @@ paddle-serving-client
 paddle-serving-server
 
 
-
-
+# python/requirements.txt
 numpy>=1.12, <=1.16.4 ; python_version<"3.5"
 numpy<=1.19.4 ; platform_machine ==  "aarch64"
 shapely==1.8.0
