--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -31,5 +31,5 @@ prometheus-client==0.12.0
 pillow==8.4.0 ; python_version == "3.6"
 pillow==9.0.0 ; python_version > "3.6"
 av==8.0.3; platform_machine !=  "aarch64"
-decord==0.4.2; platform_machine !=  "aarch64"
+#decord==0.4.2; platform_machine !=  "aarch64"
 SimpleITK; platform_machine !=  "aarch64"
