--- a/docker-compose-gpu.yml
+++ b/docker-compose-gpu.yml
@@ -9,7 +9,7 @@ services:
       - "9393:9393"
     container_name: paddle_serving
     restart: always
-    command: python -m paddle_serving_server.serve --model serving_server --port 9393 --gpu_ids 0
+    command: python -m paddle_serving_server.serve --model serving_server --port 9393 --thread 8 --gpu_ids 0
     deploy:
       resources:
         reservations:
