--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,4 @@ services:
       - "9393:9393"
     container_name: paddle_serving
     restart: always
-    command: python -m paddle_serving_server.serve --model serving_server --port 9393
+    command: python -m paddle_serving_server.serve --model serving_server --port 9393 --thread 4
